[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
env_logger = "0.11.5"
laminar = "0.5.0"
log = "0.4.22"
message-io = {version = "0.18.2", features=[]}
rand = "0.8.5"
serde = {version = "1.0.210", features=["derive"]}
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
